consumer_job/consumer/prod/kafdrop-deploy.prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafdrop
  namespace: leaf-image-management-system
  labels:
    name: "kafdrop"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: "kafdrop"
  template:
    metadata:
      labels:
        name: "kafdrop"
    spec:
      containers:
        - name: kafka-ui
          image: obsidiandynamics/kafdrop
          ports:
            - containerPort: 9000
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
