consumer_job/consumer/prod/consumer-service.prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: "consumer-app"
  namespace: "leaf-image-management-system"
spec:
  selector:
    app: "consumer-app"
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30055
  type: NodePort
