consumer_job/consumer/prod/kafdrop-ingress.prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafdrop-ingress
  namespace: leaf-image-management-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafdrop-service
                port:
                  number: 9000
